WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308216
Web content process crash under lambda in WebPage::requestTextRecognition()
https://bugs.webkit.org/show_bug.cgi?id=308216
Summary
Web content process crash under lambda in WebPage::requestTextRecognition()
Jean-Yves Avenard [:jya]
Reported
2026-02-19 03:39:43 PST
rdar://170708745
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-02-19 03:46:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59000
EWS
Comment 2
2026-02-19 06:18:57 PST
Committed
307832@main
(04012426cd7b): <
https://commits.webkit.org/307832@main
> Reviewed commits have been landed. Closing PR #59000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug