Web content process crash under lambda in WebPage::requestTextRecognition() https://bugs.webkit.org/show_bug.cgi?id=308216 rdar://170708745

Reviewed by Youenn Fablet.

Do not capture protectedPage by reference.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::requestTextRecognition):

Canonical link: https://commits.webkit.org/307832@main